crates/contexere-reduce/src/distillers/snapshots/contexere__distillers__tests__jsts_playwright.snap
---
source: src/distillers/mod.rs
expression: output
---
playwright: ✓ 22/24 | ✗ 2 [submits valid credentials:login.spec.ts:20, chart renders correctly:dashboard.spec.ts:15]
