crates/contexere-reduce/src/distillers/snapshots/contexere__distillers__tests__jsts_prettier_check.snap
---
source: src/distillers/mod.rs
expression: output
---
prettier --check: 2 file(s) need formatting
  src/lib/i18n.tsx
  src/routes/index.tsx
