crates/contexere-reduce/src/distillers/snapshots/contexere__distillers__tests__jsts_prettier_write.snap
---
source: src/distillers/mod.rs
expression: output
---
prettier --write: 3 reformatted, 6 unchanged
  src/lib/i18n.tsx
  src/routes/index.tsx
  src/components/Header.tsx
