crates/contexere-reduce/src/distillers/snapshots/contexere__distillers__tests__pytest_distillation.snap
---
source: src/distillers/mod.rs
expression: output
---
========================= 1 failed, 2 passed in 0.05s ==========================
FAILED tests/test_omni.py::test_failure - assert 1 == 2
